# tiberius_orf_finder

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
configs/: cnn_lstm.yaml  cnn_lstm_run003.yaml  cnn_lstm_run004.yaml  cnn_lstm_run005.yaml  cnn_lstm_run006.yaml  cnn_tcn.yaml  cnn_transformer.yaml  cnn_unet.yaml  default.yaml
nextflow/: main.nf  submit_smoke.sh  submit_test.sh  submit_training.sh  submit_training_restart.sh  submit_val.sh
nextflow/conf/: brain.config  species_smoke.csv  species_test.csv  species_training.csv  species_training_restart.csv  species_val.csv  species_vertebrates_test.csv  species_vertebrates_training.csv
nextflow/modules/: fetch.nf  label.nf  stringtie.nf  tfrecord.nf  varus.nf
plans/: training_plan.md
scripts/: annotate.py  evaluate.py  evaluate_accuracy.py  predict.py  slurm_eval_cnn_lstm_run001_ep09.sh  slurm_eval_cnn_lstm_run002_best.sh  slurm_eval_cnn_transformer_run001_ep36.sh  slurm_eval_cnn_transformer_run002_best.sh  slurm_predict_cnn_lstm.sh  slurm_predict_cnn_lstm_ep09.sh  slurm_predict_cnn_lstm_run005.sh  slurm_predict_cnn_lstm_run006.sh  slurm_predict_cnn_tcn_ep21.sh  slurm_predict_cnn_transformer.sh  slurm_predict_cnn_transformer_ep36.sh  slurm_train_cnn_lstm.sh  slurm_train_cnn_lstm_run002.sh  slurm_train_cnn_lstm_run003.sh  slurm_train_cnn_lstm_run004.sh  slurm_train_cnn_lstm_run005.sh  slurm_train_cnn_lstm_run006.sh  slurm_train_cnn_tcn.sh  slurm_train_cnn_transformer.sh  slurm_train_cnn_transformer_run002.sh  slurm_train_cnn_unet.sh  train.py
tests/data/: test_chunk_tfrecord.py  test_label_transcripts.py  (+1 more)
(+22 files in other folders)
