[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiberius_orf_finder"
version = "0.0.1"
authors = [
  { name="Lars Gabriel", email="lars.gabriel@uni-greifswald.de" },
]
description = "Deep-learning ORF finder for assembled transcripts (Tiberius-derived)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "pyyaml",
]

[project.optional-dependencies]
test = ["pytest"]
from_source = [
  "bricks2marble[tf]",
  "hidten",
  "numpy",
  "tensorflow[and-cuda]>=2.17,<2.20",
  "biopython",
  "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tiberius_orf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
